--- a/src/Home.css
+++ b/src/Home.css
@@ -1,18 +1,30 @@
 .photos{
     width: 50vw;
-    max-height: 400px;
+    min-height: 400px;
+    max-height: 600px;
     align-self: center;
     object-fit: cover;
+    object-position: center;
     opacity: 0;
-    transition: opacity 1s ease-out;
 }
-.photos.active{
+.img-current, .img-next{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+}
+.fade-in{
     opacity: 1;
-    transition: opacity 1s ease-in;
+    transition: opacity 1s ease-in-out;
+}
+.fade-out{
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
 }
 .photo-banner{
     display: flex;
     justify-content: center;
+    position: relative;
+    height: auto;
 }
 
 .slogan{
