--- a/src/Service.css
+++ b/src/Service.css
@@ -9,21 +9,50 @@
     background-color: white;
     width: 90vw;
 }
-h3.service-w-content{
+h3.service{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color: grey;
     margin-top: 10px;
     margin-bottom: 0;
+    width: 90vw;
 }
-h3.service-wo-content{
-    border-radius: 10px;
+h3.w-content{
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
     background-color: grey;
     margin-top: 10px;
     margin-bottom: 0;
 }
+h3.wo-content{
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: grey;
+    margin-top: 10px;
+    margin-bottom: 0;
+
+    transition: all 0.05s 0.5s steps(1, end);
+}
 .service-drop{
     background-color: lightgrey;
     margin: 0;
-    padding: 10px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.active-drop{
+    height: auto;
+    max-height: 1000px;
+    overflow: auto;
+}
+.service-img{
+    width: 60vw;
+    max-width: 500px;
+    margin: 10px;
+}
+.service-text{
+    margin: 10px;
+    font-size: calc(15px + 1vw);
 }
