--- a/src/Service.css
+++ b/src/Service.css
@@ -41,6 +41,9 @@ h3.wo-content{
     transition: max-height 0.5s ease;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .active-drop{
     height: auto;
@@ -48,11 +51,20 @@ h3.wo-content{
     overflow: auto;
 }
 .service-img{
-    width: 60vw;
+    height: 45vh;
     max-width: 500px;
     margin: 10px;
 }
 .service-text{
     margin: 10px;
     font-size: calc(15px + 1vw);
+}
+@media screen and (width < 900px){
+    .service-drop{
+        flex-direction: column;
+    }
+    .service-img{
+        width: 40vw;
+        height: auto;
+    }
 }
