--- a/src/Header.css
+++ b/src/Header.css
@@ -161,11 +161,12 @@
     top: 0px;
     max-width: 100%;
     border-radius: 0;
+    transition: all 0.2s ease;
 }
 .sl-top{
     width: auto;
     top: 5px;
-    max-width: 90%;
+    max-width: 60%;
     border-radius: 10px;
     transition: all 0.2s ease;
 }
@@ -174,6 +175,7 @@
     top: 0px;
     max-width: 100%;
     border-radius: 0;
+    justify-content: space-between;
     transition: all 0.2s ease;
 }
 .label{
@@ -203,8 +205,21 @@
     width: 40%;
     margin: 30px;
 }
+.small-logo{
+    max-height: 100%;
+    max-width: 5%;
+    margin: 5px;
+    margin-left: 10px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 15px;
+}
 .newH{
     background-color: #96C3EC;
     display: flex;
     box-shadow: 0 -5em 3em -5em inset #242E4F;
+}
+.head-space{
+    height: 100px;
+    width: 100%;
+    background-color: white;
 }
